2006-10-12  Frode Lindeijer  <f.lindeijer@gmail.com>
	* \data\graphics\sprites\npcs.png: Updated the clothes salesman,
	it was way out of date.

2006-10-12  Cédric Borgese  <cedric.borgese@gmail.com>

	* data/graphics/tiles/Woodland_x3.png : Enlarge the trunk and the 
	base of the trees in the woodland tileset.

2006-10-09  Yohann Ferreira  <bertram@cegetel.net>

	* src/gui/buysell.cpp, src/gui/buy.cpp : A little tweak to the buy
	dialogs.

2006-10-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/resources/mapreader.cpp: Added support for gzip compressed map
	layers.
	* configure.ac, The Mana World.dev: Increased version to 0.0.22.
	* src/map.cpp: Removed unused setSize method. Also introduced
	initializeOverlays method and removed the confusing setOverlay (which
	actually added one).
	* src/properties.h: Added convenience method to read a property as a
	float.
	* src/map.cpp, src/resources/ambientoverlay.cpp,
	src/resources/ambientoverlay.h: Resolved some weirdness involving
	the terms scroll and speed.


2006-10-07  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-10-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/item006.xml,
	data/graphics/sprites/item007.xml,
	data/graphics/sprites/item008.xml,
	data/graphics/sprites/item009.xml,
	data/graphics/sprites/item006.png,
	data/graphics/sprites/item007.png,
	data/graphics/sprites/item008.png,
	data/graphics/sprites/item009.png,
	data/graphics/sprites/item010.xml,
	data/graphics/sprites/item010.png: Removed empty frames from
	headgears.

2006-10-03  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/map.cpp, src/map.h, src/Makefile.am,
	src/resources/mapreader.cpp, src/resources/ambientoverlay.cpp,
	src/resources/ambientoverlay.h: Turned AmbientOverlay into a class.
	Cleaned up the associated code.

2006-10-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tools/Purger.java: Added a tool to purge old accounts from eAthena's
	database files.