@@ -7,6 +7,7 @@ usr/share/games/tmw/data/graphics
 usr/share/games/tmw/data/graphics/gui
 usr/share/games/tmw/data/graphics/sprites
 usr/share/games/tmw/data/graphics/images
+usr/share/games/tmw/data/graphics/items
 usr/share/games/tmw/data/graphics/tiles
 usr/share/games/tmw/data/maps
 usr/share/games/tmw/data/sfx
