@@ -1,3 +1,1 @@
 data/music/*.ogg			usr/share/games/tmw/data/music
-data/music/*.mp3			usr/share/games/tmw/data/music
-
